--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,8 +5,8 @@ RUN apt-get install -y ca-certificates libftdi1 wget multiarch-support
 RUN wget http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
 RUN dpkg -i libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
 RUN cd /tmp
-RUN wget https://uk1.loriot.io/home/gwsw/loriot-pi-3-sx1301_ref-SPI-0-latest.bin -O loriot-gw
+RUN wget https://eu3.loriot.io/home/gwsw/loriot-raspberry-pi-sx1301_ref-SPI-0-latest.bin -O loriot-gw
 RUN chmod +x loriot-gw
 
-CMD ./loriot-gw -f -s uk1.loriot.io
+CMD ./loriot-gw -f -s eu3.loriot.io
 
