--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,11 +2,10 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-node
 
 RUN apt-get -y update && apt-get -y upgrade
 
-RUN apt-get install -y ca-certificates libftdi1 wget 
-#RUN apt-get install -y multiarch-support
+RUN apt-get install -y ca-certificates libftdi1 wget multiarch-support
 
-#RUN wget http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
-#RUN dpkg -i libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
+RUN wget http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
+RUN dpkg -i libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
 
 RUN cd /tmp
 RUN wget https://eu3.loriot.io/home/gwsw/loriot-raspberry-pi-sx1301_ref-SPI-0-latest.bin -O loriot-gw
