--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,7 +5,7 @@ RUN apt-get -y update && apt-get -y upgrade
 RUN apt-get install -y ca-certificates 
 RUN apt-get install -y libftdi1
 RUN apt-get install -y wget
-RUN apt-get install -y multiarch-support
+#RUN apt-get install -y multiarch-support
 
 RUN wget http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
 RUN dpkg -i libssl1.0.0_1.0.1t-1+deb8u12_armhf.deb
